# mcp-server-neo4j

./: .env.example  .gitignore  README.md  demo_agent_os.py  demo_client.py  demo_client_cli.py  docker-compose.yaml  main.py  pyproject.toml  requests.http
app/: config.py  mcp.py
app/tools/: __init__.py  hello.py  movies.py
chat-demo/scripts/: run-agent.bat  run-agent.sh
client/: agent.py
