[project]
name = "mcp-server-neo4j"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "agno>=2.3.21",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "neo4j>=6.0.3",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]
